--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>LiquidWatch</title>
+    <title>WatchList</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
     <div class="ambient-light two"></div>
 
     <div id="login-view" class="glass-login">
-        <h1>LiquidWatch</h1>
+        <h1>WatchList</h1>
         <p>Your universe of Movies, TV & Anime.</p>
         <button id="google-login-btn" class="glass-btn-large">
             <i class="fa-brands fa-google"></i> Sign in with Google
