--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>WatchList</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -12,11 +12,16 @@
     <div class="ambient-light one"></div>
     <div class="ambient-light two"></div>
 
-    <div id="login-view" class="glass-login">
+    <div id="loading-overlay">
+        <div class="spinner"></div>
+        <div style="margin-top:20px; font-size:12px; opacity:0.7; letter-spacing:2px;">LOADING WATCHLIST</div>
+    </div>
+
+    <div id="login-view" class="glass-login" style="display: none;">
         <h1>WatchList</h1>
         <p>Your universe of Movies, TV & Anime.</p>
         <button id="google-login-btn" class="glass-btn-large">
-            <i class="fa-brands fa-google"></i> Sign in with Google
+            <i class="fa-brands fa-google"></i> Sign in
         </button>
     </div>
 
@@ -24,13 +29,13 @@
 
         <header class="glass-header">
             <h1 id="page-title">Discover</h1>
-            <div class="user-avatar">
-                <img id="user-profile-pic" src="" alt="User" style="display:none; width:100%; height:100%;">
-                <i id="default-avatar-icon" class="fa-solid fa-user-astronaut"></i>
+            <div style="display:flex; gap:10px; align-items:center;">
+                <button id="logout-btn" class="btn-icon-header"><i class="fa-solid fa-right-from-bracket"></i></button>
+                <div class="user-avatar">
+                    <img id="user-profile-pic" src="" alt="" style="display:none; width:100%; height:100%;">
+                    <i id="default-avatar-icon" class="fa-solid fa-user-astronaut"></i>
+                </div>
             </div>
-            <button id="logout-btn" style="background:none; border:none; color:white; margin-left:10px; cursor:pointer;">
-                <i class="fa-solid fa-right-from-bracket"></i>
-            </button>
         </header>
 
         <main id="main-content">
@@ -44,7 +49,7 @@
                 <div class="filter-chips">
                     <span class="chip active" onclick="applyLocalFilter('all', this)">All</span>
                     <span class="chip" data-filter="movie" onclick="applyLocalFilter('movie', this)">Movies</span>
-                    <span class="chip" data-filter="tv" onclick="applyLocalFilter('tv', this)">TV Series</span>
+                    <span class="chip" data-filter="tv" onclick="applyLocalFilter('tv', this)">TV</span>
                     <span class="chip" data-filter="anime" onclick="applyLocalFilter('anime', this)">Anime</span>
                 </div>
 
@@ -52,42 +57,46 @@
             </div>
 
             <div id="watchlist-view" class="view">
-                <h3 style="margin-left:10px; opacity:0.7;">Up Next</h3>
+                <div class="section-header">Up Next</div>
                 <div id="watchlist-items" class="list-layout"></div>
                 <div id="empty-list-msg" style="display:none; text-align:center; padding:40px; opacity:0.5;">
-                    <i class="fa-solid fa-couch" style="font-size:40px; margin-bottom:10px;"></i><br>
+                    <i class="fa-solid fa-couch" style="font-size:32px; margin-bottom:10px;"></i><br>
                     Nothing to watch!
                 </div>
             </div>
 
             <div id="profile-view" class="view">
 
-                <div class="glass-card" style="text-align:center; padding: 25px;">
-                    <h2 style="margin:0; font-size:16px; color:rgba(255,255,255,0.5); text-transform:uppercase;">Life Spent Watching</h2>
-                    <div id="stat-big-time" style="font-size:42px; font-weight:800; margin:10px 0; background: -webkit-linear-gradient(#fff, #aaa); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">0h 0m</div>
-                    <div style="font-size:12px; color:rgba(255,255,255,0.4);">
-                        That's roughly <span id="stat-days-calc" style="color:white; font-weight:bold;">0 days</span> total.
+                <div class="glass-card" style="flex-direction: column; gap: 0; padding: 15px;">
+                    <h2 style="margin:0 0 10px 0; font-size:12px; opacity:0.5; text-transform:uppercase; letter-spacing:1px;">Time Watched</h2>
+                    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
+                        <div style="background:rgba(255,255,255,0.05); border-radius:12px; padding:12px 10px; text-align:center; position:relative; overflow:hidden;">
+                            <div class="glow-bg" style="background:#3498db;"></div>
+                            <div id="stat-time-main" style="font-size:20px; font-weight:800; color:#fff; position:relative; z-index:2;">0h</div>
+                            <div style="font-size:10px; opacity:0.7; position:relative; z-index:2;">Movies & TV</div>
+                        </div>
+                        <div style="background:rgba(255,255,255,0.05); border-radius:12px; padding:12px 10px; text-align:center; position:relative; overflow:hidden;">
+                            <div class="glow-bg" style="background:#e84393;"></div>
+                            <div id="stat-time-anime" style="font-size:20px; font-weight:800; color:#fff; position:relative; z-index:2;">0h</div>
+                            <div style="font-size:10px; opacity:0.7; position:relative; z-index:2;">Anime</div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="stats-grid">
                     <div class="stat-badge">
-                        <i class="fa-solid fa-check-double" style="color:#2ecc71;"></i>
                         <span class="stat-value" id="stat-completed-ratio">0%</span>
-                        <span class="stat-label">Completion</span>
+                        <span class="stat-label">Done</span>
                     </div>
                     <div class="stat-badge">
-                        <i class="fa-solid fa-layer-group" style="color:#3498db;"></i>
                         <span class="stat-value" id="stat-total-eps">0</span>
                         <span class="stat-label">Episodes</span>
                     </div>
                     <div class="stat-badge">
-                        <i class="fa-solid fa-video" style="color:#9b59b6;"></i>
                         <span class="stat-value" id="stat-movies">0</span>
                         <span class="stat-label">Movies</span>
                     </div>
                     <div class="stat-badge">
-                        <i class="fa-solid fa-dragon" style="color:#e74c3c;"></i>
                         <span class="stat-value" id="stat-anime">0</span>
                         <span class="stat-label">Anime</span>
                     </div>
@@ -95,27 +104,26 @@
 
                 <div id="titan-container"></div>
 
-                <div class="glass-card">
-                    <h3>Top Genres</h3>
+                <div class="glass-card" style="flex-direction:column; gap:10px;">
+                    <div class="section-header" style="margin:0;">Top Genres</div>
                     <div id="genre-chart"></div>
                 </div>
 
-                <div class="glass-card">
-                    <h3>History (A-Z)</h3>
+                <div class="glass-card" style="flex-direction:column; gap:10px;">
+                    <div class="section-header" style="margin:0;">History</div>
                     <div id="history-list" class="history-grid"></div>
                 </div>
             </div>
         </main>
 
         <nav class="glass-nav">
-            <button class="nav-item active" onclick="switchTab('search')"><i class="fa-solid fa-compass"></i><span>Search</span></button>
-            <button class="nav-item" onclick="switchTab('watchlist')"><i class="fa-solid fa-list-check"></i><span>Watch</span></button>
-            <button class="nav-item" onclick="switchTab('profile')"><i class="fa-solid fa-chart-simple"></i><span>Profile</span></button>
+            <button class="nav-item active" onclick="switchTab('search')"><i class="fa-solid fa-compass"></i></button>
+            <button class="nav-item" onclick="switchTab('watchlist')"><i class="fa-solid fa-list-check"></i></button>
+            <button class="nav-item" onclick="switchTab('profile')"><i class="fa-solid fa-user"></i></button>
         </nav>
     </div>
 
     <div id="toast-container"></div>
-
     <script type="module" src="script.js"></script>
 </body>
 </html>
